--- a/.travis.yml
+++ b/.travis.yml
@@ -15,3 +15,4 @@ script:
   # - ng lint
   - ng build --prod
   # - ng test -- --watch=false --no-progress --browsers=ChromeHeadlessNoSandbox
+  - firebase deploy
