final fix for the day for travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ cache:
 
 
 script:
-  # - ng lint
+  ./node_modules/.bin/eslint './src/app/*.ts' --fix
   - ng build --prod
   # - ng test -- --watch=false --no-progress --browsers=ChromeHeadlessNoSandbox
-  - firebase deploy
+  # - firebase deploy says firebase: command not found
