--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,9 @@ cache:
   directories:
     - ./node_modules
 
+branches:
+  only:
+  - master
 
 script:
   - ./node_modules/.bin/eslint './src/app/*.ts' --fix
