--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@typescript-eslint/parser": "^2.1.0",
     "angularfire2": "^5.2.1",
     "firebase": "^6.4.2",
+    "hammerjs": "^2.0.8",
     "jquery": "^3.4.1",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
