--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "@typescript-eslint/eslint-plugin": "^2.1.0",
     "@typescript-eslint/parser": "^2.1.0",
     "angularfire2": "^5.2.1",
-    "firebase": "^6.4.2",
+    "firebase": "^7.6.1",
     "hammerjs": "^2.0.8",
     "jquery": "^3.4.1",
     "rxjs": "~6.4.0",
@@ -34,7 +34,7 @@
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.802.2",
+    "@angular-devkit/build-angular": "^0.803.21",
     "@angular/cli": "^8.3.0",
     "@angular/compiler-cli": "^8.2.3",
     "@angular/language-service": "^8.2.3",
