--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ dist: trusty
 sudo: false
 language: node_js
 node_js:
-- '10'
+- '12'
 cache:
   directories:
   - "./node_modules"
@@ -10,7 +10,7 @@ branches:
   only:
   - master
 script:
-- echo "Deploy!!"
+- echo "Deploying to Firebase!!"
 - "./node_modules/.bin/eslint './src/app/*.ts' --fix"
 before_deploy: 
 - npm install
